# roi_extractor

./: CMakeLists.txt  LICENSE  README.md  mesh_interpolation_test.ply
include/: types.h  utils.h
include/boundary_detector/: boundary_detector.h  closed_boundary_detector.h
include/boundary_extractor/: boundary_extractor.h  closed_boundary_extractor.h
include/boundary_order_generator/: boundary_order_generator.h  crust_boundary_order_generator.h  kdtree_boundary_order_generator.h  tsp_boundary_order_generator.h
include/region_interpolator/: mls_region_interpolator.h  poisson_region_interpolator.h  region_interpolator.h
meshes/: part_1_wwg_08_01_24.ply  part_2_wwg_08_01_24.ply  part_3_wwg_08_01_24.ply  part_4_wwg_08_01_24.ply  part_5_wwg_08_01_24.ply  part_scan.ply
src/: utils.cpp
src/boundary_detector/: closed_boundary_detector.cpp
src/boundary_extractor/: closed_boundary_extractor.cpp
src/boundary_order_generator/: crust_boundary_order_generator.cpp  kdtree_boundary_order_generator.cpp  tsp_boundary_order_generator.cpp
src/region_interpolator/: mls_region_interpolator.cpp  poisson_region_interpolator.cpp
test/: isu_roi_detection.cpp
